web-embeds/src/index.css
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap");

.apollos-widget {
  font-size: 16px;
  height: 100%;
  font-family:
    inherit,
    "Inter",
    -apple-system,
    BlinkMacSystemFont,
    Segoe UI,
    Roboto,
    Oxygen,
    Ubuntu,
    Cantarell,
    Fira Sans,
    Droid Sans,
    Helvetica Neue,
    sans-serif;
}

.apollos-widget * {
  font-family:
    inherit,
    "Inter",
    -apple-system,
    BlinkMacSystemFont,
    Segoe UI,
    Roboto,
    Oxygen,
    Ubuntu,
    Cantarell,
    Fira Sans,
    Droid Sans,
    Helvetica Neue,
    sans-serif;
}

.apollos-widget ul {
  margin: 0;
  padding: 0;
}

.apollos-widget img {
  display: block;
  max-width: 100%;
}

.apollos-widget a {
  color: inherit;
  text-decoration: none;
  transition: color 0.3s ease-in-out;
}

.apollos-widget input:focus-visible {
  outline: none;
}

